# weather_forcast_app

./: .gitignore  Makefile  README.md  docker-compose.yaml  example.env  pyproject.toml
app/: Dockerfile  main.py
app/api/: index.py  stats.py  utils.py  weather.py
app/core/: config.py  database.py
app/crud/: query.py
app/schemas/: query.py
app/templates/: index.html  stats.html  weather.html
