[tool.poetry]
name = "weather-forcast-app"
version = "0.1.0"
description = ""
authors = ["Pavel Drovnin <pavel98rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
requests = "^2.32.3"
python-multipart = "^0.0.20"
pydantic-settings = "^2.9.1"
sqlmodel = "^0.0.24"
jinja2 = "^3.1.6"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
